css/index.css
body {
	font-family: Arimo;
}

a {
	text-decoration: none;
}

table {
	text-align: center; 
	border-spacing: 0;
	width: 100%;
}

footer {
	background-color: #ffa500; 
	color: #ffffff; 
	text-align: center; 
	padding: 5px;
	font-size: 10pt;
}

.other_work_links {
	color: #ffffff;
}

.thumb-img {
	width: 100%;
}

.table-text-container {
	font-size: 16pt;
}

.thumb-text {
	color: #000000; 
	text-decoration: none;
}

.sub-title-line {
	background-color: #ffa500; 
	width: 150px; 
	height: 2px; 
	margin: auto;
}

.thumb-text-src {
	color: #000000;
	background-color: #ffffff;
	text-decoration: none;
	font-size: 10pt;
	border-style: solid;
	border-color: #000000; 
	padding: 2px;
}

.padding {
	padding: 15px;
}

#title-container {
	position: relative; 
	text-align: center; 
	color: #ffffff;
}

#vista-bkgd {
	overflow:  hidden;
	width: 100%;
	height: auto;
}

#title-name {
	position: absolute; 
	bottom: 120px; 
	left: 50%; 
	transform: translate(-50%, -50%);
}

#title-line {
	background-color: #ffa500; 
	width: 50%; 
	height: 2px; 
	position: absolute; 
	left: 50%; 
	bottom: 150px; 
	transform: translate(-50%)
}

#title-job {
	position: absolute; 
	bottom: 100px; 
	left: 50%; 
	transform: translate(-50%);
}

#contact-icon-container {
	position: absolute; 
	bottom: 80px;
	left: 50%; 
	transform: translate(-50%);
}

#samples-container {
	text-align: center; 
	padding-bottom: 15px;
}

#other-work-container {
	text-align: center; 
	background-color: #2f2f2f; 
	color: #ffffff; 
	padding-top: 15px; 
	padding-bottom: 30px;
}

/* Mobile  */
@media screen and (max-width: 480px) {
	
	#vista-bkgd {
    	visibility: hidden;
    }
    #title-name {
    	color: #000000;
    }
    #title-job {
    	color: #ffa500;
    }


}

/* Tablets */
@media screen and (min-width: 481px) and (max-width: 768px) { 
  
    #vista-bkgd {
    	height: 400px;
    }
}

/* Small Screens */
@media screen and (min-width: 769px) and (max-width: 1024px) { 
    

    #vista-bkgd {
    	height: 550px;
    }
}

/* Large Screens */
@media screen and (min-width: 1025px) { 
    .

	
    #vista-bkgd {
    	height: 1080px;
    }
	#title-name {
		bottom: 360px; 
	}
    #title-line {
		bottom: 390px; 
	}

	#title-job {
		bottom: 340px; 
	}
	#contact-icon-container {
		bottom: 320px;
	}
}

